--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="index.js"></script>
+    <script src="dev.js"></script>
   </body>
 </html>
